--- a/src/app/iaas/iaas.component.html
+++ b/src/app/iaas/iaas.component.html
@@ -1,12 +1,3 @@
-<!-- <item></item> -->
-
-<!-- <h1>Infrastructure as a Service(IaaS)</h1>
-<div>
-    <p>IaaS API provides a RESTful service to perform Life Cycle operations on Virtual Machines which can be integrated as part of DevOps pipe line</p>
-</div> -->
-
-<!-- <app-create-vm></app-create-vm> -->
-
 <div>
     <h1>Virtual Machines</h1>
       
@@ -14,22 +5,30 @@
       
     <ng-container matColumnDef="VM Name">
         <mat-header-cell *matHeaderCellDef> VM Name</mat-header-cell>
-        <mat-cell *matCellDef="let mockdata"> {{mockdata.name}} </mat-cell>
+        <mat-cell *matCellDef="let mockdata, let i = index">
+            {{mockdata.name}} 
+        </mat-cell>
     </ng-container>
       
     <ng-container matColumnDef="Status">
         <mat-header-cell *matHeaderCellDef> Status </mat-header-cell>
-        <mat-cell *matCellDef="let mockdata"> {{mockdata.status}} </mat-cell>
+        <mat-cell *matCellDef="let mockdata, let i = index">
+            {{statusArray[i]}}
+        </mat-cell>
     </ng-container>
 
     <ng-container matColumnDef="Created By">
         <mat-header-cell *matHeaderCellDef> Created By </mat-header-cell>
-        <mat-cell *matCellDef="let mockdata"> {{mockdata.by}} </mat-cell>
+        <mat-cell *matCellDef="let mockdata, let i = index">
+            {{requestorArray[i]}}
+        </mat-cell>
     </ng-container>
       
     <ng-container matColumnDef="Created Date">
         <mat-header-cell *matHeaderCellDef> Created Date </mat-header-cell>
-        <mat-cell *matCellDef="let mockdata"> {{mockdata.date}} </mat-cell>
+        <mat-cell *matCellDef="let mockdata, let i = index">
+            {{startedArray[i]}}
+        </mat-cell>
     </ng-container>
       
     <mat-header-row *matHeaderRowDef="displayedColumns"></mat-header-row>
@@ -38,7 +37,7 @@
     </mat-table>
 
     <button mat-raised-button [routerLink]="['create-vm']">Create VM</button>
-    <button mat-raised-button [routerLink]="['item']">Create TShirt</button>
+    <!-- <button mat-raised-button [routerLink]="['item']">Create TShirt</button> -->
 
 </div>
 
