--- a/src/app/new-org/new-org.component.html
+++ b/src/app/new-org/new-org.component.html
@@ -12,5 +12,5 @@
 
 <div>
 <button mat-raised-button (click)="save()"> Save </button>
-<button mat-raised-button routerLink="/org-setup" class="cancel"> Cancel </button>
+<!-- <button mat-raised-button routerLink="/org-setup" class="cancel"> Cancel </button> -->
 </div>
